--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,9 +16,35 @@
 </p>
 
 <p>
+  <b>Add Comment:</b>
+  <%= form_for([@post, @post.comments.build]) do |f| %>
+    <div class="field">
+      <%= f.label :text %><br />
+      <%= f.text_area :text, :rows => 3 %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+<% end %>
+</p>
+
+<p>
   <b>Comments:</b>
   <% Comment.where(["post_id = ?", @post.id]).each do |c| %>
-    <p><%= c.text %> (<%= User.find(c.owner_id).username %>)</p>
+    <% if c.owner_id == @current_user.id %>
+          <%= form_for([@post, c]) do |f| %>
+            <div class="field">
+              <%= f.label :text %><br />
+              <%= f.text_area :text, :rows => 3 %>
+            </div>
+            <div class="actions">
+              <%= f.submit %>
+            </div>
+            <%= link_to 'Delete', post_comment_path(@post, c), :confirm => 'Are you sure?', :method => :delete %>
+        <% end %>
+    <% else %>
+        <p><%= c.text %> (<%= User.find(c.owner_id).username %>)</p>
+    <% end %>
   <% end %>
 </p>
 
