--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,9 +12,9 @@
 <% @posts.each do |post| %>
   <tr>
     <td><%= post.title %></td>
-    <td><%= User.find(post.owner_id).username %></td>
+    <td><%= post.user.username %></td>
     <td><%= link_to 'Show', post %></td>
-    <% if post.owner_id == @current_user.id || @current_user.is_admin? %>
+    <% if post.user.id == @current_user.id || @current_user.is_admin? %>
     <td><%= link_to 'Edit', edit_post_path(post) %></td>
     <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     <% end %>
