Fixed some ruby 1.9.3 issues Fixed some lines lost in a merge

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,17 @@
   <h1>Ruby Source</h1>
   <%unless session[:user_id]%>
       <ul class="nav">
-        <li><%= link_to :Signup , :signup, class: "nav_links"%></li>|
-        <li><%= link_to :Login , :login, class: "nav_links"%></li>
+        <li><%= link_to :Signup , :signup, :class => "nav_links"%></li>|
+        <li><%= link_to :Login , :login, :class => "nav_links"%></li>
       </ul>
   <%else%>
       <ul class="nav">
-        <li><%= link_to :Home , :home, class: "nav_links" %> |</li>
-        <li><%= link_to :Logout , :logout, class: "nav_links" %></li>
-        <li><%= link_to :Posts, :posts, class: "nav_links" %></li>
+        <li><%= link_to :Home , :home, :class => "nav_links" %> |</li>
+        <li><%= link_to :Logout , :logout, :class => "nav_links" %></li>
+        <li><%= link_to :Posts, :posts, :class => "nav_links" %></li>
         <%if @current_user.is_admin?%>
-        <li><%= link_to :Categories, :categories, class: "nav_links" %></li>
-        <li><%= link_to :Users, :users, class: "nav_links" %></li>
+        <li><%= link_to :Categories, :categories, :class => "nav_links" %></li>
+        <li><%= link_to :Users, :users, :class => "nav_links" %></li>
         <%end%>
       </ul>
   <%end%>
