--- a/app/views/post_votes/index.html.erb
+++ b/app/views/post_votes/index.html.erb
@@ -11,7 +11,7 @@
   <tr>
     <td><%= link_to 'Show', post_vote %></td>
     <td><%= link_to 'Edit', edit_post_vote_path(post_vote) %></td>
-    <td><%= link_to 'Destroy', post_vote, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', post_vote, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
