--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
             <% else %>
             <td><%= link_to 'Make admin', "/users/make_admin/#{user.id}" %></td>
             <% end %>
-            <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Delete', user, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
         <% end %>
       </tr>
   <% end %>
