--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -40,7 +40,7 @@
 
 <p>
   <b>Comments:</b>
-  <% Comment.where(["post_id = ?", @post.id]).each do |c| %>
+  <% Comment.order("updated_at DESC").where(["post_id = ?", @post.id]).each do |c| %>
     <% if c.user.id == @current_user.id %>
           <%= form_for([@post, c]) do |f| %>
             <div class="field">
