Preliminary work on searching

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,20 @@
 </head>
 <body>
 <div class="Main_Header">
-  <h1>Ruby Source</h1>
+  <h1>Backchannel App</h1>
   <%unless session[:user_id]%>
-      <ul class="nav">
-        <li><%= link_to :Signup , :signup, :class => "nav_links"%></li>|
-        <li><%= link_to :Login , :login, :class => "nav_links"%></li>
-      </ul>
+      <%= link_to :Signup , :signup, :class => "nav_links"%>
+      <%= link_to :Login , :login, :class => "nav_links"%>
   <%else%>
-      <ul class="nav">
-        <li><%= link_to :Home , :home, :class => "nav_links" %> |</li>
-        <li><%= link_to :Logout , :logout, :class => "nav_links" %></li>
-        <li><%= link_to :Posts, :posts, :class => "nav_links" %></li>
-        <%if @current_user.is_admin?%>
-        <li><%= link_to :Categories, :categories, :class => "nav_links" %></li>
-        <li><%= link_to :Users, :users, :class => "nav_links" %></li>
-        <%end%>
-      </ul>
+      <%= link_to :Home , :home, :class => "nav_links" %>
+      <%= link_to :Logout , :logout, :class => "nav_links" %>
+      <%= link_to :Search, :search, :class => "nav_links" %>
+      <br/>
+      <%= link_to :Posts, :posts, :class => "nav_links" %>
+      <%if @current_user.is_admin?%>
+        <%= link_to :Categories, :categories, :class => "nav_links" %>
+        <%= link_to :Users, :users, :class => "nav_links" %>
+      <%end%>
   <%end%>
 </div>
 <% if flash[:color]== "valid" %>
