--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -93,5 +93,9 @@
 </p>
 
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Edit', edit_post_path(@post) %>
+<% unless session[:search_url] %>
+    <%= link_to 'Back', posts_path %>
+<% else %>
+    <%= link_to 'Back to results', session[:search_url] %>
+<% end %>
