--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,20 +6,20 @@
     <th>Is admin?</th>
     <th></th>
     <th></th>
+    <th></th>
   </tr>
 
   <% @users.each do |user| %>
       <tr>
         <td><%= user.username %></td>
         <td><%= user.is_admin? %></td>
-        <% if @current_user.is_admin? %>
-            <% if user.is_admin?  %>
-            <td><%= link_to 'Revoke admin', "/users/revoke_admin/#{user.id}" %></td>
-            <% else %>
-            <td><%= link_to 'Make admin', "/users/make_admin/#{user.id}" %></td>
-            <% end %>
-            <td><%= link_to 'Delete', user, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+        <% if user.is_admin?  %>
+          <td><%= link_to 'Revoke admin', "/users/revoke_admin/#{user.id}" %></td>
+        <% else %>
+          <td><%= link_to 'Make admin', "/users/make_admin/#{user.id}" %></td>
         <% end %>
+        <td><%= link_to 'Delete', user, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+        <td><%= link_to 'Vote report', :controller => :users, :action => :votes, :id => user %></td>
       </tr>
   <% end %>
 </table>
