--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -3,19 +3,24 @@
     <th>Title</th>
     <th>Poster</th>
     <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
-  <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.user.username %></td>
-        <td><%= link_to 'Show', post %></td>
-        <% if post.user.id == @current_user.id || @current_user.is_admin? %>
-            <td><%= link_to 'Edit', edit_post_path(post) %></td>
-            <td><%= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
+  <% unless @posts.size == 0 %>
+    <% @posts.each do |post| %>
+        <tr>
+          <td><%= post.title %></td>
+          <td><%= post.user.username %></td>
+          <td><%= link_to 'Show', post %>
+          <% if post.user.id == @current_user.id || @current_user.is_admin? %>
+              <%= link_to 'Edit', edit_post_path(post) %>
+              <%= link_to 'Destroy', post, :method => :delete, :data => { :confirm => 'Are you sure?' } %>
+          <% end %>
+          </td>
+        </tr>
+    <% end %>
+  <% else %>
+    <tr>
+      <td colspan="100">No posts found.</td>
+    </tr>
   <% end %>
 </table>
