--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,7 @@
     <% elsif @post.post_votes.where(:post_id => @post.id, :user_id => @current_user.id).exists?() %>
       You and <%= who_voted_post_link @post_votes.size-1, "#{@post_votes.size-1} other users", @post.id %> have voted on this.
     <% else %>
-      <%= who_voted_post_link @post_votes.size-1, "#{@post_votes.size-1} other users", @post.id %>' have voted on this.
+      <%= who_voted_post_link @post_votes.size, "#{@post_votes.size} other users", @post.id %> have voted on this.
       <%= form_for([@post, @post_vote]) do |f| %>
         <div class="actions">
           <%= f.submit %>
@@ -51,8 +51,9 @@
 
 <div class='box comments'>
   <b>Comments:</b>
-  <% Comment.order("updated_at DESC").where(["post_id = ?", @post.id]).each do |c| %>
-    <div class='box comment'>
+
+    <% @comments.each do |c| %>
+      <div class='box comment'>
       <% # If the current user is the comment author %>
       <% if c.user.id == @current_user.id %>
             <% # Create the form for editing this comment %>
