--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<!--The following site was used as a tutorial/basis for developing our user authentication system:
+http://rubysource.com/rails-userpassword-authentication-from-scratch-part-i/-->
 <% @page_title = "UserAuth | Signup" %>
 <div>
   <h1>Sign Up</h1>
